force-app/main/default/objects/Audit_Finding__c/Audit_Finding__c.object-meta.xml
<CustomObject>
    <label>Audit Finding</label>
    <nameField>
        <displayFormat>AF-{0000000}</displayFormat>
        <label>Audit Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>