force-app/main/default/objects/Audit_Finding__c/fields/Action_Plan_Definition_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Definition_Due_Date__c</fullName>
    <label>Action Plan Definition Due Date</label>
    <type>Date</type>
</CustomField>