force-app/main/default/objects/Audit_Finding__c/fields/Action_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Description__c</fullName>
    <label>Action Plan Description</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>