force-app/main/default/objects/Audit_Finding__c/fields/Action_Plan_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Follow_Up__c</fullName>
    <label>Action Plan Follow up</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>