force-app/main/default/objects/Audit_Finding__c/fields/Actual_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Implementation_Date__c</fullName>
    <label>Actual Implementation Date</label>
    <type>Date</type>
</CustomField>