force-app/main/default/objects/Audit_Finding__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>