force-app/main/default/objects/Audit_Finding__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit</label>
    <referenceTo>CMPL123QMS__Internal_Audit__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>