force-app/main/default/objects/Audit_Finding__c/fields/Auditee_Response__c.field-meta.xml
<CustomField>
    <fullName>Auditee_Response__c</fullName>
    <label>Auditee&apos;s Response</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>