force-app/main/default/objects/Audit_Finding__c/fields/Cause_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Cause_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cause Investigation #</label>
    <referenceTo>Cause_Investigation__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>