force-app/main/default/objects/Audit_Finding__c/fields/Cause_Investigation_Required__c.field-meta.xml
<CustomField>
    <fullName>Cause_Investigation_Required__c</fullName>
    <label>Cause Investigation Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>