force-app/main/default/objects/Audit_Finding__c/fields/CMPL123_WF_Action_Performed_By__c.field-meta.xml
<CustomField>
    <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workflow Action Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_FindingcCMPL123_Users</relationshipName>
    <type>Lookup</type>
</CustomField>