force-app/main/default/objects/Audit_Finding__c/fields/Correction_Opening__c.field-meta.xml
<CustomField>
    <fullName>Correction_Opening__c</fullName>
    <label>Correction Opened?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>