force-app/main/default/objects/Audit_Finding__c/fields/Department_Other__c.field-meta.xml
<CustomField>
    <fullName>Department_Other__c</fullName>
    <label>Department - Other</label>
    <type>TextArea</type>
</CustomField>