force-app/main/default/objects/Audit_Finding__c/fields/Department_s_Involved__c.field-meta.xml
<CustomField>
    <fullName>Department_s_Involved__c</fullName>
    <label>Department(s) Involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department_s</valueSetName>
    </valueSet>
</CustomField>