force-app/main/default/objects/Audit_Finding__c/fields/Departments_Involved__c.field-meta.xml
<CustomField>
    <fullName>Departments_Involved__c</fullName>
    <label>Department(s) Involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMPL123QMS__Department</valueSetName>
    </valueSet>
</CustomField>