force-app/main/default/objects/Audit_Finding__c/fields/Distributor_Finding_Category__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Finding_Category__c</fullName>
    <label>Distributor Finding Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Complaint handling</fullName>
            </value>
            <value>
                <fullName>Customer Service Activities</fullName>
            </value>
            <value>
                <fullName>HR &amp; Training;RA activities</fullName>
            </value>
            <value>
                <fullName>Logistics &amp; Transport;QMS</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Sales Admin</fullName>
            </value>
            <value>
                <fullName>Vigilance &amp; FA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>