force-app/main/default/objects/Audit_Finding__c/fields/Existing_CAPA__c.field-meta.xml
<CustomField>
    <fullName>Existing_CAPA__c</fullName>
    <label>Existing CAPA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes-in TWD</fullName>
            </value>
            <value>
                <fullName>Yes-not in TWD</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>