force-app/main/default/objects/Audit_Finding__c/fields/Existing_CAPA_Non_TWD__c.field-meta.xml
<CustomField>
    <fullName>Existing_CAPA_Non_TWD__c</fullName>
    <label>Existing CAPA # - Non TWD</label>
    <length>60</length>
    <type>Text</type>
</CustomField>