force-app/main/default/objects/Audit_Finding__c/fields/Existing_CAPA_TWD__c.field-meta.xml
<CustomField>
    <fullName>Existing_CAPA_TWD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing CAPA # - TWD</label>
    <referenceTo>CMPL123QMS__CAPA__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>