force-app/main/default/objects/Audit_Finding__c/fields/Finding_Description__c.field-meta.xml
<CustomField>
    <fullName>Finding_Description__c</fullName>
    <label>Finding Description</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>