force-app/main/default/objects/Audit_Finding__c/fields/Finding_Type__c.field-meta.xml
<CustomField>
    <fullName>Finding_Type__c</fullName>
    <label>Finding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Clinical</fullName>
                <isActive>false</isActive>
                <label>Clinical</label>
            </value>
            <value>
                <fullName>Deviation</fullName>
                <isActive>false</isActive>
                <label>Deviation</label>
            </value>
            <value>
                <fullName>EHS/Facilities</fullName>
                <isActive>false</isActive>
                <label>EHS/Facilities</label>
            </value>
            <value>
                <fullName>Non conformance</fullName>
                <isActive>false</isActive>
                <label>Non conformance</label>
            </value>
            <value>
                <fullName>Non-Conformity</fullName>
            </value>
            <value>
                <fullName>OOS</fullName>
                <isActive>false</isActive>
                <label>OOS</label>
            </value>
            <value>
                <fullName>OOT</fullName>
                <isActive>false</isActive>
                <label>OOT</label>
            </value>
            <value>
                <fullName>Opportunity for Improvement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Process</fullName>
                <isActive>false</isActive>
                <label>Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>