force-app/main/default/objects/Audit_Finding__c/fields/Implementation_Targeted_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Targeted_Date__c</fullName>
    <label>Implementation Targeted Date</label>
    <type>Date</type>
</CustomField>