force-app/main/default/objects/Audit_Finding__c/fields/Justification_No_Correction__c.field-meta.xml
<CustomField>
    <fullName>Justification_No_Correction__c</fullName>
    <label>Justification for No Correction</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>