force-app/main/default/objects/Audit_Finding__c/fields/Lead_Auditor_Action_Plan_Approval_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Auditor_Action_Plan_Approval_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Lead) Auditor -  Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Findings1</relationshipName>
    <type>Lookup</type>
</CustomField>