force-app/main/default/objects/Audit_Finding__c/fields/Lead_Auditor_Action_Plan_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Auditor_Action_Plan_Approval_Date__c</fullName>
    <label>(Lead) Auditor Approval  1 Date</label>
    <type>DateTime</type>
</CustomField>