force-app/main/default/objects/Audit_Finding__c/fields/Metrics_CAPA_Status__c.field-meta.xml
<CustomField>
    <fullName>Metrics_CAPA_Status__c</fullName>
    <label>CAPA status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>