force-app/main/default/objects/Audit_Finding__c/fields/Metrics_Changes_for_Action_Plan_Definiti__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Changes_for_Action_Plan_Definiti__c</fullName>
    <label># Changes for Action Plan Definition Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>