force-app/main/default/objects/Audit_Finding__c/fields/Metrics_Correction__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Correction__c</fullName>
    <label># Correction(s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>