force-app/main/default/objects/Audit_Finding__c/fields/Metrics_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Days_Open__c</fullName>
    <formula>IF(NOT(ISBLANK( Closed_Date__c )), Closed_Date__c -  CreatedDate  , Closed_Date__c -   DATETIMEVALUE(TODAY()) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>