force-app/main/default/objects/Audit_Finding__c/fields/No_CI_Justification__c.field-meta.xml
<CustomField>
    <fullName>No_CI_Justification__c</fullName>
    <label>No CI Justification</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>