force-app/main/default/objects/Audit_Finding__c/fields/Nonconformity_Grading__c.field-meta.xml
<CustomField>
    <fullName>Nonconformity_Grading__c</fullName>
    <label>Non-Conformity Grading</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Finding_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>