force-app/main/default/objects/Audit_Finding__c/fields/Nonconformity_Type__c.field-meta.xml
<CustomField>
    <fullName>Nonconformity_Type__c</fullName>
    <label>Non-Conformity Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Finding_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>