force-app/main/default/objects/Audit_Finding__c/fields/Optional_Action_Plan_Approval_3__c.field-meta.xml
<CustomField>
    <fullName>Optional_Action_Plan_Approval_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Optional Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Findings3</relationshipName>
    <type>Lookup</type>
</CustomField>