force-app/main/default/objects/Audit_Finding__c/fields/Optional_Action_Plan_Approval_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Optional_Action_Plan_Approval_Date_2__c</fullName>
    <label>Optional Approval 2 Date</label>
    <type>DateTime</type>
</CustomField>