force-app/main/default/objects/Audit_Finding__c/fields/Original_Implementation_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Implementation_Due_Date__c</fullName>
    <label>Original Implementation Due Date</label>
    <type>Date</type>
</CustomField>