force-app/main/default/objects/Audit_Finding__c/fields/Origination__c.field-meta.xml
<CustomField>
    <fullName>Origination__c</fullName>
    <formula>Parent_Audit__r.Origination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origination</label>
    <type>Text</type>
</CustomField>