force-app/main/default/objects/Audit_Finding__c/fields/Origination_Entity__c.field-meta.xml
<CustomField>
    <fullName>Origination_Entity__c</fullName>
    <formula>Parent_Audit__r.Origination_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origination Entity</label>
    <type>Text</type>
</CustomField>