force-app/main/default/objects/Audit_Finding__c/fields/Parent_Audit__c.field-meta.xml
<CustomField>
    <fullName>Parent_Audit__c</fullName>
    <label>Parent Audit #</label>
    <referenceTo>BMX_Quality_Audit__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>