force-app/main/default/objects/Audit_Finding__c/fields/Parent_Audit_Title__c.field-meta.xml
<CustomField>
    <fullName>Parent_Audit_Title__c</fullName>
    <formula>Parent_Audit__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Audit Title</label>
    <type>Text</type>
</CustomField>