force-app/main/default/objects/Audit_Finding__c/fields/Previous_Audit_Finding_in_TWD__c.field-meta.xml
<CustomField>
    <fullName>Previous_Audit_Finding_in_TWD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Audit Finding in TWD</label>
    <referenceTo>Audit_Finding__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>