force-app/main/default/objects/Audit_Finding__c/fields/Previous_Audit_Finding_Other__c.field-meta.xml
<CustomField>
    <fullName>Previous_Audit_Finding_Other__c</fullName>
    <label>Previous Audit Finding (other)</label>
    <type>TextArea</type>
</CustomField>