force-app/main/default/objects/Audit_Finding__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <label>Problem Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>