force-app/main/default/objects/Audit_Finding__c/fields/QMS_Category__c.field-meta.xml
<CustomField>
    <fullName>QMS_Category__c</fullName>
    <label>QMS Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QMS_Category</valueSetName>
    </valueSet>
</CustomField>