force-app/main/default/objects/Audit_Finding__c/fields/QMS_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>QMS_Sub_Category__c</fullName>
    <label>QMS Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>QMS_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>QMS_Sub_Category</valueSetName>
    </valueSet>
</CustomField>