force-app/main/default/objects/Audit_Finding__c/fields/Repeat_Finding__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Finding__c</fullName>
    <label>Repeat Finding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes-in TWD</fullName>
            </value>
            <value>
                <fullName>Yes-not in TWD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>