force-app/main/default/objects/Audit_Finding__c/fields/Sub_Department_Involved__c.field-meta.xml
<CustomField>
    <fullName>Sub_Department_Involved__c</fullName>
    <label>Sub-Department(s) Involved</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>