force-app/main/default/objects/Audit_Finding__c/validationRules/Auditee_Response_Entry_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Auditee_Response_Entry_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED (Auditee_Response__c),
    NOT(
        OR(
            INCLUDES($User.TWD_Role__c, &apos;Audit Coordinator&apos;),
            INCLUDES($User.TWD_Role__c, &apos;QE/CAPA Coordinator&apos;),
            Assigned_To__r.Id = $User.Id 
        )
    )
)</errorConditionFormula>
    <errorMessage>Only users with the roles &apos;Audit Coordinator&apos; or &apos;QE/CAPA Coordinator&apos;, and the assigned user, are allowed to enter an Auditee&apos;s Response</errorMessage>
</ValidationRule>