force-app/main/default/objects/Audit_Finding__c/validationRules/Limit_User_to_Create_Audit_Finding.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_User_to_Create_Audit_Finding</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(
        OR(
            $User.Id = Parent_Audit__r.Lead_Auditor__c,
            INCLUDES($User.TWD_Role__c, &quot;Audit Coordinator&quot;),
            CASESAFEID($User.Id) = Parent_Audit__r.Tech_Auditor__c)
    )
)</errorConditionFormula>
    <errorMessage>You have no right to create an Audit Finding</errorMessage>
</ValidationRule>