force-app/main/default/objects/Audit_Finding__c/validationRules/Nonconformity_Grading_N_A.validationRule-meta.xml
<ValidationRule>
    <fullName>Nonconformity_Grading_N_A</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
			RecordType.DeveloperName =&apos;Internal&apos;,
				ISPICKVAL(Scope__c, &apos;Corporate&apos;),
   ISPICKVAL(Nonconformity_Grading__c, &apos;N/A&apos;),
			ISPICKVAL(Finding_Type__c, &apos;Non-Conformity&apos;)		
)</errorConditionFormula>
    <errorMessage>Choose a value other than &apos;N/A&apos; for &apos;Non-conformity Grading&apos; when &apos;Scope&apos; is &apos;Corporate&apos;.</errorMessage>
</ValidationRule>