force-app/main/default/objects/Audit_Finding__c/validationRules/Prevent_Users_Selecting_Wrong_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Users_Selecting_Wrong_Record</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name  &lt;&gt;  Parent_Audit__r.RecordType.Name</errorConditionFormula>
    <errorMessage>You cannot create an Audit Finding with a different record type than the Quality Audit. Please select the correct record .</errorMessage>
</ValidationRule>