force-app/main/default/objects/Audit_Finding__c/validationRules/Previous_Audit_Finding_other_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Previous_Audit_Finding_other_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Repeat_Finding__c, &apos;Yes-Not in TWD&apos;),
    ISBLANK(Previous_Audit_Finding_Other__c)
)</errorConditionFormula>
    <errorMessage>Please provide &apos;Previous Audit Finding (other)&apos; when &apos;Repeat Finding&apos; is &apos;Yes-Not in TWD&apos;</errorMessage>
</ValidationRule>