force-app/main/default/objects/Audit_Finding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Audit__c</columns>
    <columns>Title__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Scope__c</columns>
    <columns>Finding_Type__c</columns>
    <columns>CMPL123_WF_Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>